# cycling-game

./: README.md  pyproject.toml
Executables/MacOS/Tourist Bowling.app/Contents/: Info.plist
Executables/MacOS/Tourist Bowling.app/Contents/Resources/: icon.icns
docs/: Vignette.ipynb  doc.ipynb
src/: pyproject.toml  test.py
src/cycling_game/: __init__.py  animation.py  cache.py  entities.py  example.py  game_test.py  game_test.spec  run.py  test.py  utils.py
