[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cycling_game"]

[project]
name = "cycling_game"
version = "0.0.1"
authors = [
  { name="Felix Hofer", email="felix_hofer@gmx.de" },
]
description = "Bicycle-based side-scroller game"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame==2.6.1"
]

[project.scripts]
cycling_game_run = "cycling_game.run:run_game"