[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cycling_game"]


[project]
name = "cycling_game"
version = "0.0.1"
authors = [
  { name="Felix Hofer", email="felix_hofer@gmx.de" },
]
description = "A small arcade style game"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]